added top 20 active streets stat

--- a/7. heatmap.ipynb
+++ b/7. heatmap.ipynb
@@ -1125,6 +1125,17 @@
    "source": [
     "ddf_cut.to_excel('Комментарии с гео.xlsx')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ddf_cut.to_excel('Комментарии с гео без сводной.xlsx')"
+   ]
   }
  ],
  "metadata": {
